--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.2
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   dartz: ^0.10.0-nullsafety.2
   google_fonts: ^3.0.1
+  flutter_bloc: ^8.1.2
+  bloc_test: ^9.1.1
 
 dev_dependencies:
   flutter_test:
