--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_bloc: ^8.1.2
   bloc_test: ^9.1.1
+  get_it: ^7.1.3
 
 dev_dependencies:
   flutter_test:
