--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   bloc_test: ^9.1.1
   get_it: ^7.1.3
+  flutter_smart_dialog: ^4.2.5
 
 dev_dependencies:
   flutter_test:
